imports on application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "components/avatar";
+@import "components/banner";
+@import "components/buttons";
+@import "components/card";
+@import "components/comments";
+@import "components/footer";
+@import "components/navbar";
