footer and font awesome added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,9 @@
 
 @import "bootstrap-overrides";
 
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 @import "components/avatar";
 @import "components/banner";
 @import "components/buttons";
