--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -2,6 +2,9 @@
   background: #F4F4F4;
   display: flex;
   align-items: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
