--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fa fa-github"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><%= icon('fab', 'github') %></a>
+    <a href="#"><%= icon('fab', 'instagram') %></a>
+    <a href="#"><%= icon('fab', 'linkedin') %></a>
   </div>
   <div class="footer-copyright">
     Copyright Joe Schafer 2018
