--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,10 +5,9 @@
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://lviv.com/wp-content/uploads/2017/01/jjjjj.jpg');">
           <div class="card-category"><%= Category.find(post.category_id).name%></div>
-          <div class="card-description">
-            <h1><%= link_to post.title, post %></h1>
-            <p><%= post.content %></p>
-          </div>
+              <%= react_component("Post", {title: post.title,
+                                          path: post_path(post)}
+                                  ) %>            
         </div>
       </div>
     <% end %>
