Card converted to react component

--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -5,7 +5,9 @@
   background-position: center;
   color: white;
   position: relative;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://lviv.com/wp-content/uploads/2017/01/jjjjj.jpg');
 }
+
 .card-user {
   position: absolute;
   right: 10px;
